multicontainer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-demo
  labels:
    name: nginx-demo
    app: nginx
    type: webserver
spec:
  containers:
  - name: container-write
    image: alpine
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    command: ["/bin/sh"] #equivalent to entrypoint in dockerfile, use shell called sh
    args: ["-c", "while true;do date >> /var/tmp/index.html; sleep 10;done"]
    volumeMounts:
    - name: shared-volume
      mountPath: /var/tmp
  - name: container-read
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports: 
    - containerPort: 80
      name: http
      hostPort: 8090
      protocol: TCP
    volumeMounts:
    - name: shared-volume
      mountPath: /usr/share/nginx/html #the volume will be mounted in this location in the container
  volumes: #
  - name: shared-volume
    emptyDir: {}
# kubectl debug node/<nodeid> -it --image=ubuntu - creates ubuntu image and logs into the node
