springapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp
spec:
  replicas: 0
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
      - name: springapp
        image: sachetwasti61/demoapp
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: springapp-srv
spec:
  type: ClusterIP
  selector:
    app: springapp
  ports:
  - port: 8080
    targetPort: 8080
