ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: pod.dev
    http:
      paths:
      - pathType: Prefix
        path: /api/v1/?(.*)
        backend:
          service:
            name: springapp-srv
            port: 
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-init-srv
            port:
              number: 80
